# Codeforces

./: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: main.cpp.F92DEE046754A98E.idx
src/: main.cpp
